SPARQLWrapper's changelog:
-------------------------

201X-XX-XX  1.8.1   - Update classifiers (Python 3.6)
                    - Added some documentation about the parameter to indicate the output format
                    - Fixed typo in width calculation
                    - Added support for CSV, TSV (PR #98)


2016-12-07  1.8.0   - Updated return formats for not content negotiation situations
                    - Included license in the MANIFEST (issue #76)
                    - Added explicit support for RDF/XML as allowed format (issue #75)
                    - Added proper shebang (issue #78)
                    - Moved keepalive as optional dependency (issue #79)
                    - Fixed hash check on prefixes (issue #77)
                    - Fixed epydoc warnings (issue #41)

2015-12-18  1.7.6   - Removed wrong response encoding (issue #70)
                    - Authorization header bug when using Python 3 (issue #71)

2015-11-19  1.7.5   - Removed pip dependency on setup (issue #69)

2015-11-05  1.7.4   - Fixed packaging (issue #66)

2015-11-05  1.7.3   - Finally fixed the keepalive issue in all Pyhon versions  (issue #65)
                    - Removed old JSON layer in favor of the native json module

2015-11-03  1.7.2   - Moved to the new keepalive package (issues #53 and #61)

2015-10-29  1.7.1   - Fixed build in Python 3.x (issue #57)

2015-10-29  1.7.0   - Added support to HTTP Digest Auth Support (issue #45)
                    - Improved print_results showing language tag (xml:lang) and datatype
                    - Updated to RDFLib 4.x

2014-08-26  1.6.4   - Fixed unicode problems on setup (issue #42)

2014-08-26  1.6.3   - Fixed unicode problems with urllib in Python 3 (issue #35)
                    - Restored SPARQLWrapper2 class (issue #36)
                    - Enhanced warning for missing rdflib-jsonld (issue #38)
                    - Fixed build system (issue #39)
